Reverting it back to the initial version

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
           <p>If you are developer, front-end guru, DBA, dev-ops engineer, there is a lot you can help us.</p>
           <p>This is an ongoing project, you can pick it from anywhere and work on it.</p>
           <ul class="list">
+            <li>Checkout the back-end code from github from <a href="https://github.com/gullele/boot-validation-n-security">here</a></li>
+            <li>Checkout the front-end code from github from <a href="https://github.com/gullele/boot-validation-n-security">here</a></li>
             <li>Install postres locally or use docker for postgres. Docker is preferable</li>
             <li>Play with the app locally</li>
             <li>Add tests, features, corrections, bug fixes..</li>
