--- a/help-list.html
+++ b/help-list.html
@@ -139,10 +139,10 @@
             <li class="breadcrumb-item active">Tables</li>
           </ol>
 
-          <!-- DataTables Example 
+          <!-- DataTables Example -->
           <div class="card mb-3">
             <div class="card-header">
-              <a href="help.html">Need Help?</a></a></div> -->
+              <a href="help.html">Need Help?</a></a></div>
             <div class="card-body">
               <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
