green bar removal, url update and package change

--- a/help.html
+++ b/help.html
@@ -144,7 +144,7 @@
           <h1>Help</h1>
           <hr>
           <p>Create your cause here. Be precise on what you want and what kind of help you need.</p>
-          <p class="alert alert-success da-message"></p>
+          <p class="alert da-message"></p>
         </div>
 
 
