--- a/help.html
+++ b/help.html
@@ -143,7 +143,7 @@
           <!-- Page Content -->
           <h1>Help</h1>
           <hr>
-          <p>Create your cause here. Be precise on what you want and what kind of help you need.</p>
+          <p>Create your cause here and others will jump to help you. Be precise on what you want and what kind of help you need.</p>
           <p class="alert da-message"></p>
         </div>
 
