--- a/edit-member.html
+++ b/edit-member.html
@@ -189,9 +189,18 @@
             </form>
           </div> <!-- tab-pane.// -->
           <div class="tab-pane fade" id="nav-tab-paypal">
-          <p>To be updated soon</p>
+            <div>
+              <div class="form-group">
+                <div class="form-label-group">
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Enter email address" required="required" autofocus="autofocus">
+                  <label for="inputEmail">Enter email address</label>
+                </div>
+              </div>
+              <a class="btn btn-primary btn-block" href="login.html">Reset Password</a>
+            </div>
+            
+            </div>
           
-          </div>
           <div class="tab-pane fade" id="nav-tab-bank">
           <p>To be updated soon</p>
           </div> <!-- tab-pane.// -->
