--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content=" ETHelp is a help collaboration tool for the community. We all need help on this or on that as we are not subject experts on everything. But someone is! That is where ETHelp will come to the picture.
+    If you have any need on consultation, moving help, new to the area and want someone, want to send medicine home, need rental.. you name it. Just jump to the ETHelp and others will take it from there.">
     <meta name="author" content="">
 
     <title>Egna Le Egna - About</title>
