adding change password page

--- a/edit-member.html
+++ b/edit-member.html
@@ -188,8 +188,22 @@
             <button class="subscribe btn btn-primary btn-block btn-update-member" type="button">Update</button>
             </form>
           </div> <!-- tab-pane.// -->
-          <div class="tab-pane bg-info" id="nav-tab-paypal">
-          <p>To be updated soon </p>
+          <div class="tab-pane fade" id="nav-tab-paypal">
+            <div>
+              <div class="form-group">
+                <label for="InputPassword">Current Password</label>
+                <input type="Password" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="currentPassword">
+              </div>
+              <div class="form-group">
+                <label for="InputPassword1">New Password</label>
+                <input type="password" class="form-control" id="InputPassword1" placeholder="New Password">
+              </div>
+              <div class="form-group">
+                <label for="InputPassword1">Repeat New Password</label>
+                <input type="password" class="form-control" id="InputPassword1" placeholder="Repeat New Password">
+              </div>
+              <button type="submit" class="btn btn-primary">Change Password</button>
+            </div>
           </div>
   
           <div class="tab-pane fade" id="nav-tab-bank">
