--- a/help.html
+++ b/help.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="ETHelp will come to the picture.
+    If you have any need on consultation, moving help, new to the area and want someone, want to send medicine home, need rental.. you name it. Just jump to the ETHelp and others will take it from there.">
     <meta name="author" content="">
 
     <title>I need your help</title>
