valdiating help page

--- a/help.html
+++ b/help.html
@@ -273,6 +273,49 @@
           })
         });
         $(".help-request-submit").click(function(){
+
+
+          var title = $.trim($("#inputTitle").val());
+
+
+ 
+var description = $.trim($("#inputDescription").val());
+
+
+
+
+
+
+
+//check if both or either of title/description is provided
+
+
+
+if (title == '' || description == '') {
+
+
+
+  $('.da-message').html("Can you check if both title and description are provided please?")
+
+
+
+  .addClass('alert-danger');
+
+
+
+
+
+
+
+  //if the validation failed, process no more..
+
+
+
+  return;
+
+
+
+}
           var categories = "[";
           var i=0;
           $("input:checkbox[name=category]:checked").each(function(){
