--- a/login.html
+++ b/login.html
@@ -47,10 +47,56 @@
                   <input type="checkbox" value="remember-me">
                   Remember Password
                 </label>
+
+            <script type="text/JavaScript">
+              function validate(form)  
+                     {
+                        var returnValue=true;
+                        if(frmLogin.txtUserName.value.not entered)
+                              {
+                                   returnValue = false;
+                                   alert("You must eneter your username.
+                                   long.\nPlease try again.");
+                                   frmLogin.txtUserName.value = "";
+                                   frmLogin.txtUserName.focus();
+                                   return returnValue;
+                               }
+                if (frmLogin.txtPassword1.value.not enetred)
+                              {
+                                     returnValue = false;
+                                    alert("You must enetr your password .\n
+                                    Please try again.");
+                                    frmLogin.txtPassword1.value = "";
+                                    frmLogin.txtPassword2.value = "";
+                                    frmLogin.txtPassword1.focus();
+                                    return returnValue;
+                               }                  
+               if (frmLogin.txtPassword1.value != frmRegister.txtPassword2.value)
+                          {
+                             returnValue = false;
+                             alert("Your password entries did not match.\Please try again.");
+                             frmLogin.txtPassword1.value = "";
+                             frmLogin.txtPassword2.value = "";
+                             frmLogin.txtPassword1.focus();
+                             return returnValue;
+                         }
+              if(returnValue!=false)
+                       {
+                                 alert("You are successfully login................. \n
+                                 THANK YOU........................");
+                                 return returnValue;
+                        }
+               }
+  </script>
+
+
               </div>
             </div>
             <button type="button" class="btn btn-primary btn-block login-button">Login</button>
           </form>
+
+            
+
           <div class="text-center">
             <a class="d-block small mt-3" href="register.html">Register an Account</a>
             <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
@@ -67,7 +113,7 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="js/egna-legna.js"></script>
     <script>
-      $(".login-button").click(function(){
+      $(".login-button").click(you must eneter both user name and password(){
         console.log(url);
         var data = '{"email":"'+$("#inputEmail").val()+'", "password":"'+$("#inputPassword").val()+'"}'; 
         $.ajax({
@@ -90,6 +136,10 @@
           }
         })
       });
+    
+
+
+
     </script>
 
   </body>
