Card no 39 and 40. Adding share and like images to help-detail page

--- a/help-detail.html
+++ b/help-detail.html
@@ -323,6 +323,8 @@ img {
 
                   </ul>
                   <div> <a class="add-more-pictures" href="/help-resources">Add More Pictures(Only help owner)</a></div>
+                  <div><img class="help-like-icon" width="20" height="20"src="img/heart-empty.png" /> like..</div>
+                  <div><img class="help-share-icon" width="20" height="20"src="img/share.png" /> share..</div>
                 </div>
                 <div class="details col-md-6">
                   <div class="rating">
