--- a/charts.html
+++ b/charts.html
@@ -47,7 +47,7 @@
         </div>
       </form>
 
-      <!-- Navbar -->
+      <!-- Navbar here -->
       <ul class="navbar-nav ml-auto ml-md-0">
         <li class="nav-item dropdown no-arrow mx-1">
           <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
